<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.bdgp</groupId>
  <artifactId>OpenHiCAMM</artifactId>
  <version>1.0</version>
  <name>OpenHiCAMM</name>
  <description></description>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <scriptSourceDirectory>scripts</scriptSourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <outputDirectory>target/classes</outputDirectory>
    <testOutputDirectory>target/test-classes</testOutputDirectory>
    <resources>
      <resource>
        <directory>resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>test/resources</directory>
      </testResource>
    </testResources>
    <directory>target</directory>
    <finalName>OpenHiCAMM</finalName>
    <plugins>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.4</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>1.0-alpha-2</version>
        <executions>
          <execution>
            <phase>initialize</phase>
            <goals>
              <goal>read-project-properties</goal>
            </goals>
            <configuration>
              <files>
                <file>${basedir}/build.properties</file>
              </files>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>14</source>
          <target>14</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <forceCreation>true</forceCreation>
        </configuration>
      </plugin>
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
         <version>2.5.1</version>
         <executions>
            <execution>
               <goals>
                  <goal>install</goal>
               </goals>
               <phase>install</phase>
            </execution>
         </executions>
      </plugin>
     <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.hsqldb</groupId>
                  <artifactId>hsqldb</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>com.j256.ormlite</groupId>
                  <artifactId>ormlite-core</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>com.j256.ormlite</groupId>
                  <artifactId>ormlite-jdbc</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>com.miglayout</groupId>
                  <artifactId>miglayout</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>sc.fiji</groupId>
                  <artifactId>Hough_Transform</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>org.sparkjava</groupId>
                  <artifactId>spark-core</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-base</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-fxml</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-web</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-swing</artifactId>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-controls</artifactId>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${fiji.dir}/jars</outputDirectory>
              <overWriteReleases>true</overWriteReleases>
              <overWriteSnapshots>true</overWriteSnapshots>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <phase>install</phase>
            <configuration>
              <target>
                <mkdir dir="${fiji.dir}/mmplugins"/>
                <copy 
                  file="${project.build.directory}/${project.build.finalName}.${project.packaging}" 
                  todir="${fiji.dir}/mmplugins"
                  overwrite="true" verbose="true"/>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>ormlite</id>
      <url>http://ormlite.com/releases/</url>
    </repository>
    <repository>
      <id>imagej</id>
      <url>http://maven.imagej.net/content/repositories/thirdparty/</url>
    </repository>
    <repository>
      <id>imagej public</id>
      <url>http://maven.imagej.net/content/groups/public/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>net.imagej</groupId>
      <artifactId>ij</artifactId>
      <version>1.50i</version>
    </dependency>
    <dependency>
      <groupId>MicroManager</groupId>
      <artifactId>MMJ_</artifactId>
      <version>1.4.23</version>
    </dependency>
    <dependency>
      <groupId>MicroManager</groupId>
      <artifactId>MMCoreJ</artifactId>
      <version>1.4.23</version>
    </dependency>
    <dependency>
      <groupId>MicroManager</groupId>
      <artifactId>PixelCalibrator</artifactId>
      <version>1.4.23</version>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.3.4</version>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>sqltool</artifactId>
      <version>2.3.4</version>
    </dependency>
    <dependency>
      <groupId>com.j256.ormlite</groupId>
      <artifactId>ormlite-core</artifactId>
      <version>4.48</version>
    </dependency>
    <dependency>
      <groupId>com.j256.ormlite</groupId>
      <artifactId>ormlite-jdbc</artifactId>
      <version>4.48</version>
    </dependency>
    <dependency>
      <groupId>com.miglayout</groupId>
      <artifactId>miglayout</artifactId>
      <version>3.7.4</version>
    </dependency>
    <dependency>
      <groupId>edu.mines</groupId>
      <artifactId>mines-jtk</artifactId>
      <version>20100113</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>17.0</version>
    </dependency>
    <dependency>
      <groupId>sc.fiji</groupId>
      <artifactId>Hough_Transform</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.sparkjava</groupId>
      <artifactId>spark-core</artifactId>
      <version>2.9.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>14</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>14</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>14</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>14</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>14</version>
    </dependency>
  </dependencies>
</project>
